--- a/package.json
+++ b/package.json
@@ -128,6 +128,9 @@
     "libvips",
     "vips"
   ],
+  "engines": {
+    "node": ">=11.0.0"
+  },
   "dependencies": {
     "color": "^4.2.3",
     "detect-libc": "^2.0.1",
